# src/interface/rest-controller/src/schema/fridge/create/request.rs
@@ -3,5 +3,4 @@ use serde::Deserialize;
 #[derive(Debug, Deserialize)]
 pub struct CreateFridgeRequest {
     pub name: String,
-    pub owner_user_id: String,
 }
